app/static/styles/about.css
.about-container {
    background-image: url("../img/background.jpg") ;
}

.header-text {
    text-align: center;
    color: white;
    font-size: 4vw;
}

/* if we want the card text centered: */
.carousel-item {
    text-align: center;
}

.card-img-top-luke {
    width: 100%;
    height: 45vw;
    object-fit: cover;
}

.card-img-top-sam {
    width: 100%;
    height: 45vw;
    object-fit: cover;
}

.card-img-top-mustafa {
    width: 100%;
    height: 45vw;
    object-fit: cover;
}

.card {
    margin-left: 25%;
    margin-right: 25%;
    margin-top: 5%;
    margin-bottom: 5%;
    background-color: #738F75 !important;
}


/* .card {
    margin: 40px;
} */

.card-body i {
    text-rendering: optimizeLegibility;
    font-size: 25px;
    color: #0C1917;
    margin: 0.5em;
    border: none;
}

.card-body a {
    text-decoration: none;
}

.card-body i:hover {
    color: #1D341F;
}

.img-hobby1 {
    max-height:75%;

    overflow: hidden;
}

.img-hobby2 {
    max-height:75%;
  
    overflow: hidden;
}

.btn {
    background-color: #0C1917 !important;
}

